Improvements over local model

--- a/pom.xml
+++ b/pom.xml
@@ -83,7 +83,7 @@
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ServicesResourceTransformer" />
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>br.unb.cic.Main</mainClass>
+                                    <mainClass>ons.Main</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -139,7 +139,7 @@
                         <manifest>
                             <addClasspath>true</addClasspath>
                             <classpathPrefix>lib/</classpathPrefix>
-                            <mainClass>br.unb.cic.Main</mainClass>
+                            <mainClass>ons.Main</mainClass>
                         </manifest>
                     </archive>
                 </configuration>
@@ -166,7 +166,7 @@
                 <artifactId>exec-maven-plugin</artifactId>
                 <version>3.0.0</version>
                 <configuration>
-                    <mainClass>br.unb.cic.Main</mainClass>
+                    <mainClass>ons.Main</mainClass>
                     <systemProperties></systemProperties>
                 </configuration>
             </plugin>
